unpackaged/main/default/objects/ServiceTerritory/ServiceTerritory.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>