unpackaged/main/default/objects/ServiceTerritory/fields/ACG_Facility__c.field-meta.xml
<CustomField>
    <fullName>ACG_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ACG Facility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Facility</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Territories</relationshipLabel>
    <relationshipName>Service_Territories</relationshipName>
    <type>Lookup</type>
</CustomField>