unpackaged/main/default/objects/ServiceTerritory/fields/Additional_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact_Information__c</fullName>
    <description>to hold additional contact details including phone numbers and instructions</description>
    <label>Additional Contact Information</label>
    <type>TextArea</type>
</CustomField>