unpackaged/main/default/objects/ServiceTerritory/fields/Apply_Autoschedule_Retry_Batch__c.field-meta.xml
<CustomField>
    <fullName>Apply_Autoschedule_Retry_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Autoschedule Retry Batch</label>
    <type>Checkbox</type>
</CustomField>