unpackaged/main/default/objects/ServiceTerritory/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <description>Controls which types of appointments</description>
    <label>Appointment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
                <label>Phone</label>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>People</fullName>
                <label>In Branch</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>