unpackaged/main/default/objects/ServiceTerritory/fields/Auto_Create_STMs__c.field-meta.xml
<CustomField>
    <fullName>Auto_Create_STMs__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When selected, an automated process will create secondary STMs for this territory and any children territories when a primary service territory member is inserted for a child territory</inlineHelpText>
    <label>Auto-Create STMs</label>
    <type>Checkbox</type>
</CustomField>