unpackaged/main/default/objects/ServiceTerritory/fields/Club_Code__c.field-meta.xml
<CustomField>
    <fullName>Club_Code__c</fullName>
    <label>Club Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
            </value>
            <value>
                <fullName>002</fullName>
            </value>
            <value>
                <fullName>004</fullName>
            </value>
            <value>
                <fullName>005</fullName>
            </value>
            <value>
                <fullName>006</fullName>
            </value>
            <value>
                <fullName>014</fullName>
            </value>
            <value>
                <fullName>018</fullName>
            </value>
            <value>
                <fullName>020</fullName>
            </value>
            <value>
                <fullName>023</fullName>
            </value>
            <value>
                <fullName>036</fullName>
            </value>
            <value>
                <fullName>045</fullName>
            </value>
            <value>
                <fullName>047</fullName>
            </value>
            <value>
                <fullName>049</fullName>
            </value>
            <value>
                <fullName>057</fullName>
            </value>
            <value>
                <fullName>065</fullName>
            </value>
            <value>
                <fullName>066</fullName>
            </value>
            <value>
                <fullName>069</fullName>
            </value>
            <value>
                <fullName>071</fullName>
            </value>
            <value>
                <fullName>080</fullName>
            </value>
            <value>
                <fullName>084</fullName>
            </value>
            <value>
                <fullName>104</fullName>
            </value>
            <value>
                <fullName>111</fullName>
            </value>
            <value>
                <fullName>113</fullName>
            </value>
            <value>
                <fullName>115</fullName>
            </value>
            <value>
                <fullName>130</fullName>
            </value>
            <value>
                <fullName>137</fullName>
            </value>
            <value>
                <fullName>160</fullName>
            </value>
            <value>
                <fullName>177</fullName>
            </value>
            <value>
                <fullName>188</fullName>
            </value>
            <value>
                <fullName>195</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>