unpackaged/main/default/objects/ServiceTerritory/fields/Club_Name__c.field-meta.xml
<CustomField>
    <fullName>Club_Name__c</fullName>
    <label>Club Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Club_Name</valueSetName>
    </valueSet>
</CustomField>