unpackaged/main/default/objects/ServiceTerritory/fields/Comm_Ctr__c.field-meta.xml
<CustomField>
    <fullName>Comm_Ctr__c</fullName>
    <label>Comm Ctr</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>008</fullName>
            </value>
            <value>
                <fullName>042</fullName>
            </value>
            <value>
                <fullName>044</fullName>
            </value>
            <value>
                <fullName>045</fullName>
            </value>
            <value>
                <fullName>074</fullName>
            </value>
            <value>
                <fullName>075</fullName>
            </value>
            <value>
                <fullName>097</fullName>
            </value>
            <value>
                <fullName>168</fullName>
            </value>
            <value>
                <fullName>169</fullName>
            </value>
            <value>
                <fullName>192</fullName>
            </value>
            <value>
                <fullName>240</fullName>
                <default>true</default>
                <label>240</label>
            </value>
            <value>
                <fullName>398</fullName>
            </value>
            <value>
                <fullName>441</fullName>
            </value>
            <value>
                <fullName>888</fullName>
            </value>
            <value>
                <fullName>BLF</fullName>
                <isActive>false</isActive>
                <label>Bluefield</label>
            </value>
            <value>
                <fullName>BLG</fullName>
                <isActive>false</isActive>
                <label>Bluegrass</label>
            </value>
            <value>
                <fullName>CIN</fullName>
                <isActive>false</isActive>
                <label>Cincinnati</label>
            </value>
            <value>
                <fullName>HOC</fullName>
                <isActive>false</isActive>
                <label>Hamilton</label>
            </value>
            <value>
                <fullName>HAR</fullName>
                <isActive>false</isActive>
                <label>Hartford</label>
            </value>
            <value>
                <fullName>Hudson Valley</fullName>
                <isActive>false</isActive>
                <label>Hudson Valley</label>
            </value>
            <value>
                <fullName>KAN</fullName>
                <isActive>false</isActive>
                <label>Kansas</label>
            </value>
            <value>
                <fullName>MIA</fullName>
                <isActive>false</isActive>
                <label>Miami County</label>
            </value>
            <value>
                <fullName>MV</fullName>
                <isActive>false</isActive>
                <label>Miami Valley</label>
            </value>
            <value>
                <fullName>NOC</fullName>
                <isActive>false</isActive>
                <label>Newark</label>
            </value>
            <value>
                <fullName>NWO</fullName>
                <isActive>false</isActive>
                <label>Northwest Ohio</label>
            </value>
            <value>
                <fullName>SWV</fullName>
                <isActive>false</isActive>
                <label>South West Virginia</label>
            </value>
            <value>
                <fullName>TUL</fullName>
                <isActive>false</isActive>
                <label>Tulsa Okl-SD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>