unpackaged/main/default/objects/ServiceTerritory/fields/Contracted_Facility__c.field-meta.xml
<CustomField>
    <fullName>Contracted_Facility__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Contracted Facility</label>
    <type>Checkbox</type>
</CustomField>