unpackaged/main/default/objects/ServiceTerritory/fields/CSR_Reporting_Group__c.field-meta.xml
<CustomField>
    <fullName>CSR_Reporting_Group__c</fullName>
    <label>CSR Reporting Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alabama Rural</fullName>
            </value>
            <value>
                <fullName>Albuquerque</fullName>
            </value>
            <value>
                <fullName>Arkansas</fullName>
            </value>
            <value>
                <fullName>Auburn</fullName>
            </value>
            <value>
                <fullName>Baton Rouge</fullName>
            </value>
            <value>
                <fullName>Birmingham</fullName>
            </value>
            <value>
                <fullName>Burbank</fullName>
            </value>
            <value>
                <fullName>Central Alabama</fullName>
            </value>
            <value>
                <fullName>Chino</fullName>
            </value>
            <value>
                <fullName>Columbia</fullName>
            </value>
            <value>
                <fullName>Costa Mesa</fullName>
            </value>
            <value>
                <fullName>Dallas</fullName>
            </value>
            <value>
                <fullName>Eastern Shore</fullName>
            </value>
            <value>
                <fullName>East St. Louis</fullName>
            </value>
            <value>
                <fullName>Evansville</fullName>
            </value>
            <value>
                <fullName>Gulf Shores</fullName>
            </value>
            <value>
                <fullName>Hawaii (Big Island)</fullName>
            </value>
            <value>
                <fullName>Houston</fullName>
            </value>
            <value>
                <fullName>Huntsville</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Indiana</fullName>
            </value>
            <value>
                <fullName>Isle of White and Suffolk</fullName>
            </value>
            <value>
                <fullName>Jackson</fullName>
            </value>
            <value>
                <fullName>Kansas</fullName>
            </value>
            <value>
                <fullName>Kansas City, KS</fullName>
            </value>
            <value>
                <fullName>Kansas City, MO</fullName>
            </value>
            <value>
                <fullName>Kauai</fullName>
            </value>
            <value>
                <fullName>Kentucky</fullName>
            </value>
            <value>
                <fullName>Landline NNE</fullName>
            </value>
            <value>
                <fullName>Las Cruces</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>