unpackaged/main/default/objects/ServiceTerritory/fields/DBA_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>DBA_Address_Line_1__c</fullName>
    <label>DBA Address Line 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>