unpackaged/main/default/objects/ServiceTerritory/fields/DBA_City__c.field-meta.xml
<CustomField>
    <fullName>DBA_City__c</fullName>
    <label>DBA City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>