unpackaged/main/default/objects/ServiceTerritory/fields/DBA_State__c.field-meta.xml
<CustomField>
    <fullName>DBA_State__c</fullName>
    <label>DBA State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACG_States</valueSetName>
    </valueSet>
</CustomField>