unpackaged/main/default/objects/ServiceTerritory/fields/DBA_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>DBA_Zip_Code__c</fullName>
    <label>DBA Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>