unpackaged/main/default/objects/ServiceTerritory/fields/Decline_Calls__c.field-meta.xml
<CustomField>
    <fullName>Decline_Calls__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Drivers in this facility can decline calls</description>
    <label>Decline Calls</label>
    <type>Checkbox</type>
</CustomField>