unpackaged/main/default/objects/ServiceTerritory/fields/Dispatch_Method__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Method__c</fullName>
    <label>Dispatch Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AVD Dispatch</fullName>
            </value>
            <value>
                <fullName>Full Technology</fullName>
                <default>true</default>
                <label>Full Technology</label>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Landline</fullName>
            </value>
            <value>
                <fullName>Full Technology - AA</fullName>
            </value>
            <value>
                <fullName>TowBook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>