unpackaged/main/default/objects/ServiceTerritory/fields/Driver_can_go_Online_Offline__c.field-meta.xml
<CustomField>
    <fullName>Driver_can_go_Online_Offline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Driver can go Online/Offline</label>
    <type>Checkbox</type>
</CustomField>