unpackaged/main/default/objects/ServiceTerritory/fields/Drivers_can_Decline_Calls__c.field-meta.xml
<CustomField>
    <fullName>Drivers_can_Decline_Calls__c</fullName>
    <defaultValue>false</defaultValue>
    <description>“Drivers in this facility can decline calls”</description>
    <label>Drivers can Decline Calls</label>
    <type>Checkbox</type>
</CustomField>