unpackaged/main/default/objects/ServiceTerritory/fields/Drivers_can_View_Scheduled_Calls__c.field-meta.xml
<CustomField>
    <fullName>Drivers_can_View_Scheduled_Calls__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Drivers from service territory to be able to view scheduled class.</description>
    <label>Drivers can View Scheduled Calls</label>
    <type>Checkbox</type>
</CustomField>