unpackaged/main/default/objects/ServiceTerritory/fields/Eligible_for_Payment__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Payment</label>
    <type>Checkbox</type>
</CustomField>