unpackaged/main/default/objects/ServiceTerritory/fields/Enable_Calculate_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Enable_Calculate_Mileage__c</fullName>
    <label>Enable Calculate Mileage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>From Service Territory</fullName>
            </value>
            <value>
                <fullName>From Driver Location</fullName>
            </value>
            <value>
                <fullName>Not Calculated Facility</fullName>
                <default>true</default>
                <label>Not Calculated Facility</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>