unpackaged/main/default/objects/ServiceTerritory/fields/Enable_Calculate_Tow_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Enable_Calculate_Tow_Mileage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Calculate Tow Mileage</label>
    <type>Checkbox</type>
</CustomField>