unpackaged/main/default/objects/ServiceTerritory/fields/Enabled_For_Appointment_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Enabled_For_Appointment_Assistant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled For Appointment Assistant</label>
    <type>Checkbox</type>
</CustomField>