unpackaged/main/default/objects/ServiceTerritory/fields/Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Entity_Name__c</fullName>
    <description>This is the Corporation or LLC name, same as Facility Name for Sole Proprietor</description>
    <label>Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>