unpackaged/main/default/objects/ServiceTerritory/fields/Excluded_from_Case_Reassignment__c.field-meta.xml
<CustomField>
    <fullName>Excluded_from_Case_Reassignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excluded from Case Reassignment</label>
    <type>Checkbox</type>
</CustomField>