unpackaged/main/default/objects/ServiceTerritory/fields/Facility_Geocode__c.field-meta.xml
<CustomField>
    <fullName>Facility_Geocode__c</fullName>
    <formula>TEXT(Latitude) &amp; &#39;,&#39; &amp; TEXT(Longitude)</formula>
    <label>Facility Geocode</label>
    <type>Text</type>
</CustomField>