unpackaged/main/default/objects/ServiceTerritory/fields/Facility_Number__c.field-meta.xml
<CustomField>
    <fullName>Facility_Number__c</fullName>
    <label>Facility Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>