unpackaged/main/default/objects/ServiceTerritory/fields/Facility_Owner__c.field-meta.xml
<CustomField>
    <fullName>Facility_Owner__c</fullName>
    <label>Facility Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>