unpackaged/main/default/objects/ServiceTerritory/fields/Facility_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Facility_Owner_Email__c</fullName>
    <label>Facility Owner Email</label>
    <type>Email</type>
</CustomField>