unpackaged/main/default/objects/ServiceTerritory/fields/Facility_Taxable__c.field-meta.xml
<CustomField>
    <fullName>Facility_Taxable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Facility Taxable</label>
    <type>Checkbox</type>
</CustomField>