unpackaged/main/default/objects/ServiceTerritory/fields/Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type__c</fullName>
    <label>Facility Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAR Body Shop</fullName>
            </value>
            <value>
                <fullName>AAR Glass</fullName>
            </value>
            <value>
                <fullName>Battery with Full Svc</fullName>
            </value>
            <value>
                <fullName>Battery with Light Svc</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Club Owned Repair</fullName>
            </value>
            <value>
                <fullName>Car Dealership</fullName>
            </value>
            <value>
                <fullName>Fleet</fullName>
            </value>
            <value>
                <fullName>Full Svc No Battery</fullName>
            </value>
            <value>
                <fullName>Independent Repair</fullName>
            </value>
            <value>
                <fullName>Locksmith</fullName>
            </value>
            <value>
                <fullName>Light Svc No Battery</fullName>
            </value>
            <value>
                <fullName>AAR Repair Shop</fullName>
            </value>
            <value>
                <fullName>RV Only</fullName>
            </value>
            <value>
                <fullName>Roadside Only</fullName>
            </value>
            <value>
                <fullName>Specialty Shop</fullName>
            </value>
            <value>
                <fullName>Turnpike</fullName>
            </value>
            <value>
                <fullName>Tow Only</fullName>
            </value>
            <value>
                <fullName>Test Facility</fullName>
            </value>
            <value>
                <fullName>Bringg Dummy Facility</fullName>
                <isActive>false</isActive>
                <label>Bringg Dummy Facility</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>