unpackaged/main/default/objects/ServiceTerritory/fields/FSL_Case_Region_Mapping__c.field-meta.xml
<CustomField>
    <fullName>FSL_Case_Region_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FSL Case Region Mapping</label>
    <referenceTo>FSL_Case_Region_Mapping__c</referenceTo>
    <relationshipLabel>Service Territories</relationshipLabel>
    <relationshipName>Service_Territories</relationshipName>
    <type>Lookup</type>
</CustomField>