unpackaged/main/default/objects/ServiceTerritory/fields/FSL_Manager__c.field-meta.xml
<CustomField>
    <fullName>FSL_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSR Supervisor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Territories</relationshipName>
    <type>Lookup</type>
</CustomField>