unpackaged/main/default/objects/ServiceTerritory/fields/Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Integration_ID__c</fullName>
    <description>ID of record from source system.</description>
    <externalId>true</externalId>
    <label>Integration ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>