unpackaged/main/default/objects/ServiceTerritory/fields/Is_Fleet__c.field-meta.xml
<CustomField>
    <fullName>Is_Fleet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is an indicator that the service territory is a club fleet location</description>
    <inlineHelpText>Only check this box if the service territory is a club fleet location</inlineHelpText>
    <label>Is Fleet</label>
    <type>Checkbox</type>
</CustomField>