unpackaged/main/default/objects/ServiceTerritory/fields/isFleet__c.field-meta.xml
<CustomField>
    <fullName>isFleet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Club Fleet?</label>
    <type>Checkbox</type>
</CustomField>