unpackaged/main/default/objects/ServiceTerritory/fields/IsLandline__c.field-meta.xml
<CustomField>
    <fullName>IsLandline__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this station a landline station?
Check = Yes.
Blank = No.</inlineHelpText>
    <label>Landline?</label>
    <type>Checkbox</type>
</CustomField>