unpackaged/main/default/objects/ServiceTerritory/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <description>Location name displayed on Agent Bio Page. Not in use. Added originally to display all locations addresses under bio page.</description>
    <inlineHelpText>Location name displayed on Agent Bio Page</inlineHelpText>
    <label>Location Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>