unpackaged/main/default/objects/ServiceTerritory/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <label>Mailing Address</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>