unpackaged/main/default/objects/ServiceTerritory/fields/Non_Payment_Facility__c.field-meta.xml
<CustomField>
    <fullName>Non_Payment_Facility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies a Facility that will not have payment file created for itself during its payment cycles</description>
    <label>Non Payment Facility</label>
    <type>Checkbox</type>
</CustomField>