unpackaged/main/default/objects/ServiceTerritory/fields/Reciprocal_Bonus__c.field-meta.xml
<CustomField>
    <fullName>Reciprocal_Bonus__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Reciprocal Bonus</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>