unpackaged/main/default/objects/ServiceTerritory/fields/Reporting_Group__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Group__c</fullName>
    <label>Reporting Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BONUS</fullName>
            </value>
            <value>
                <fullName>NOBONUS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>