unpackaged/main/default/objects/ServiceTerritory/fields/Restrict_Coverage_via_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Restrict_Coverage_via_Zip_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Restrict Coverage via Zip Code</label>
    <type>Checkbox</type>
</CustomField>