unpackaged/main/default/objects/ServiceTerritory/fields/Service_Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Type__c</fullName>
    <label>Service Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>F</fullName>
                <label>Club Owned Fleet (COF)</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Preferred Service Provider (PSP)</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Contractor (C)</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Other/Commercial Service Provider (O)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>