unpackaged/main/default/objects/ServiceTerritory/fields/ST_Override_Related_List__c.field-meta.xml
<CustomField>
    <fullName>ST_Override_Related_List__c</fullName>
    <description>This is used to get the related list for overrides</description>
    <formula>HYPERLINK(&quot;https://aaanortheast2.lightning.force.com/lightning/r/ServiceTerritory/&quot;&amp;Id&amp;&quot;/related/Service_Territory_Scheduling_Overrides__r/view?overrideNavRules=true&quot;,&quot;Related List&quot;)</formula>
    <label>ST Override Related List</label>
    <type>Text</type>
</CustomField>